<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/rv_screen_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/container_name" android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:text="@string/vc_change_credentials_description" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/vc_new_password" app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/password" android:inputType="textPassword" android:importantForAutofill="noExcludeDescendants" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/vc_confirm_password" app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/password_confirm" android:inputType="textPassword" android:importantForAutofill="noExcludeDescendants" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/vc_pim">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/pim" android:inputType="number" android:importantForAutofill="no" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView android:text="@string/vc_kdf" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <Spinner android:id="@+id/kdf" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:id="@+id/kdf_parameters" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:text="@string/vc_keyfiles" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/select_keyfiles" android:text="@string/vc_select_keyfiles" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@+id/select_keyfile_directory" android:text="@string/vc_select_keyfile_directory" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@+id/generate_keyfile" android:text="@string/vc_generate_keyfile" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:id="@+id/keyfile_list" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <com.google.android.material.materialswitch.MaterialSwitch android:id="@+id/save_with_biometric" android:text="@string/vc_save_with_biometric" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <ProgressBar android:id="@+id/progress" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:id="@+id/status" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <Button android:id="@+id/change_credentials" android:text="@string/vc_change_credentials" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
