<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:clipToPadding="false"
    android:scrollbars="vertical"
    android:fadeScrollbars="false">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/rv_screen_padding" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/container_name" android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:id="@+id/maximum_capacity" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/vc_size_mib">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/size_mib" android:inputType="number" android:importantForAutofill="no" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/vc_password" app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/password" android:inputType="textPassword" android:importantForAutofill="noExcludeDescendants" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/password_confirm_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/vc_confirm_creation_password" app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/password_confirm" android:inputType="textPassword" android:importantForAutofill="noExcludeDescendants" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/vc_pim">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/pim" android:inputType="number" android:importantForAutofill="no" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner android:id="@+id/cipher" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:text="@string/vc_kdf" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <Spinner android:id="@+id/kdf" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:id="@+id/kdf_parameters" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <Spinner android:id="@+id/file_system" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:text="@string/vc_keyfiles" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/select_keyfiles" android:text="@string/vc_select_keyfiles" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@+id/select_keyfile_directory" android:text="@string/vc_select_keyfile_directory" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@+id/generate_keyfile" android:text="@string/vc_generate_keyfile" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:id="@+id/keyfile_list" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <ProgressBar android:id="@+id/create_progress" style="?android:attr/progressBarStyleHorizontal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <TextView android:id="@+id/create_status" android:layout_width="match_parent" android:layout_height="wrap_content" />
        <Button android:id="@+id/cancel_create" android:visibility="gone" android:text="@string/vc_cancel_creation" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <Button android:id="@+id/create_volume" android:text="@string/vc_create_hidden_volume" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
